--- a/power-distribution-module-2022.ioc
+++ b/power-distribution-module-2022.ioc
@@ -28,7 +28,6 @@ PB13.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
 PF6.GPIO_Label=ADC_INPUT7
-PE6.GPIO_Label=DIO4
 ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC3.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_12
 USART3.VirtualMode-Asynchronous=VM_ASYNC
@@ -49,7 +48,6 @@ PD0.Signal=GPIO_Output
 ADC3.ScanConvMode=ADC_SCAN_ENABLE
 RCC.SAI2Freq_Value=96000000
 PD8.Signal=USART3_TX
-PE5.Signal=GPIO_Output
 FREERTOS.configMINIMAL_STACK_SIZE=256
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 PF10.GPIO_Label=ADC_INPUT6
@@ -73,11 +71,9 @@ SH.ADCx_IN1.ConfNb=1
 ADC3.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 PG4.GPIO_Label=LATCH
-PE4.GPIO_Label=DIO2
 PF10.Locked=true
 ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ScanConvMode,DiscontinuousConvMode,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,DataAlign,EOCSelection,InjNumberOfConversion,DMAContinuousRequests
 SH.ADCx_IN11.ConfNb=1
-PE2.Signal=GPIO_Output
 PF8.Mode=IN6
 SH.ADCx_IN4.ConfNb=1
 ADC3.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -112,7 +108,6 @@ Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 PF10.Mode=IN8
 PB10.GPIOParameters=GPIO_Label
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
-PE6.Locked=true
 TIM14.IPParameters=Prescaler
 CAN1.CalculateTimeBit=1000.00
 PA4.GPIO_Label=ADC_INPUT12
@@ -131,16 +126,14 @@ ProjectManager.ProjectFileName=power-distribution-module-2022.ioc
 Dma.ADC1.0.Instance=DMA2_Stream0
 FREERTOS.Tasks01=taskMain_Loop,0,256,task_main_loop,Default,NULL,Dynamic,NULL,NULL;taskGCAN_Hardwa,0,256,task_gcan_hw,Default,NULL,Dynamic,NULL,NULL
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=62
+Mcu.PinsNb=56
 PC11.Locked=true
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,DMAContinuousRequests,ContinuousConvMode,ScanConvMode,DiscontinuousConvMode,EOCSelection,NbrOfConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,ClockPrescaler
-PC13.Locked=true
 PG5.Locked=true
 PG5.Signal=GPIO_Output
 PA9.GPIO_Label=EN8
 PG3.Locked=true
-PC13.Signal=GPIO_Output
 ADC3.Rank-6\#ChannelRegularConversion=7
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,ABOM,AWUM,Mode
 CAN1.CalculateBaudRate=1000000
@@ -152,28 +145,22 @@ PA11.GPIO_Label=EN9
 PF14.GPIO_Label=SCL
 NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.UART8Freq_Value=16000000
-PC0.Signal=ADCx_IN10
 PB14.Locked=true
+PC0.Signal=ADCx_IN10
 PC11.GPIOParameters=GPIO_Label
-Mcu.Pin60=VP_SYS_VS_tim6
-Mcu.Pin61=VP_TIM14_VS_ClockSourceINT
 PF8.GPIO_Label=ADC_INPUT1
 PC3.GPIOParameters=GPIO_Label
 PA11.Locked=true
 PA15.Locked=true
-Mcu.Pin59=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin57=PB8
-Mcu.Pin58=PB9
-Mcu.Pin51=PC11
+Mcu.Pin51=PB8
 RCC.USART6Freq_Value=16000000
-Mcu.Pin52=PC12
+Mcu.Pin52=PB9
 SH.ADCx_IN7.0=ADC1_IN7,IN7
-Mcu.Pin50=PC10
-Mcu.Pin55=PB3
+Mcu.Pin50=PB7
+Mcu.Pin55=VP_TIM14_VS_ClockSourceINT
 ADC3.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-Mcu.Pin56=PB7
-Mcu.Pin53=PD0
-Mcu.Pin54=PD1
+Mcu.Pin53=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin54=VP_SYS_VS_tim6
 Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
 PA9.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
@@ -181,10 +168,10 @@ PB9.Locked=true
 ADC3.NbrOfConversion=10
 Dma.ADC3.1.FIFOMode=DMA_FIFOMODE_DISABLE
 PD8.Mode=Asynchronous
-Mcu.Pin48=PA14
-Mcu.Pin49=PA15
-Mcu.Pin46=PA12
-Mcu.Pin47=PA13
+Mcu.Pin48=PD1
+Mcu.Pin49=PB3
+Mcu.Pin46=PC12
+Mcu.Pin47=PD0
 Dma.ADC3.1.Instance=DMA2_Stream1
 PB10.Signal=GPIO_Output
 PF3.GPIOParameters=GPIO_Label
@@ -192,39 +179,39 @@ ADC3.Rank-9\#ChannelRegularConversion=10
 PB14.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_Label
 PA5.Signal=ADCx_IN5
-Mcu.Pin40=PG4
-Mcu.Pin41=PG5
-Mcu.Pin44=PA10
-Mcu.Pin45=PA11
-Mcu.Pin42=PG6
-Mcu.Pin43=PA9
+Mcu.Pin40=PA12
+Mcu.Pin41=PA13
+Mcu.Pin44=PC10
+Mcu.Pin45=PC11
+Mcu.Pin42=PA14
+Mcu.Pin43=PA15
 ADC1.Rank-12\#ChannelRegularConversion=10
 ProjectManager.LastFirmware=false
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 ADC3.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_14
-Mcu.Pin37=PD13
-Mcu.Pin38=PD15
+Mcu.Pin37=PA9
+Mcu.Pin38=PA10
 PB15.GPIO_Label=EN16
-Mcu.Pin35=PD8
+Mcu.Pin35=PG5
 RCC.I2C1Freq_Value=16000000
-Mcu.Pin36=PD9
+Mcu.Pin36=PG6
 RCC.PLLI2SPCLKFreq_Value=96000000
 SH.ADCx_IN0.ConfNb=1
-Mcu.Pin39=PG3
+Mcu.Pin39=PA11
 RCC.RNGFreq_Value=96000000
 PC2.GPIOParameters=GPIO_Label
 PF4.GPIO_Label=ADC_INPUT5
-Mcu.Pin30=PB11
+Mcu.Pin30=PD9
 PA1.GPIO_Label=ADC_INPUT10
 Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 RCC.EthernetFreq_Value=16000000
 SH.ADCx_IN12.ConfNb=1
-Mcu.Pin33=PB14
+Mcu.Pin33=PG3
 PA0/WKUP.GPIO_Label=ADC_INPUT14
-Mcu.Pin34=PB15
-Mcu.Pin31=PB12
+Mcu.Pin34=PG4
+Mcu.Pin31=PD13
 SH.ADCx_IN4.0=ADC1_IN4,IN4
-Mcu.Pin32=PB13
+Mcu.Pin32=PD15
 PA9.Locked=true
 Dma.ADC3.1.PeriphInc=DMA_PINC_DISABLE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -238,57 +225,54 @@ ProjectManager.FreePins=false
 PF9.GPIOParameters=GPIO_Label
 RCC.PLLI2SQCLKFreq_Value=96000000
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
-Mcu.Pin26=PF14
-Mcu.Pin27=PF15
+Mcu.Pin26=PB13
+Mcu.Pin27=PB14
 TIM14.Prescaler=160-1
-Mcu.Pin24=PA6
+Mcu.Pin24=PB11
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA7
-Mcu.Pin28=PG0
-Mcu.Pin29=PB10
+Mcu.Pin25=PB12
+Mcu.Pin28=PB15
+Mcu.Pin29=PD8
 ADC3.Rank-1\#ChannelRegularConversion=2
 PA4.Signal=ADCx_IN4
-Mcu.Pin22=PA4
-Mcu.Pin23=PA5
-Mcu.Pin20=PA2
+Mcu.Pin22=PG0
+Mcu.Pin23=PB10
+Mcu.Pin20=PF14
 ADC1.master=1
-Mcu.Pin21=PA3
 PA3.Locked=true
+Mcu.Pin21=PF15
 PA10.Locked=true
 PA5.GPIO_Label=ADC_INPUT19
 NVIC.ForceEnableDMAVector=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PE5.GPIO_Label=DIO3
 PC12.GPIO_Label=EN2
 ProjectManager.CompilerOptimize=6
 PD15.Locked=true
 PA11.Signal=GPIO_Output
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PC1
+Mcu.Pin15=PA3
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-Mcu.Pin16=PC2
+Mcu.Pin16=PA4
 ADC3.EOCSelection=ADC_EOC_SINGLE_CONV
-Mcu.Pin13=PF10
+Mcu.Pin13=PA1
 PF8.Locked=true
-Mcu.Pin14=PC0
+Mcu.Pin14=PA2
+Mcu.Pin19=PA7
 PF10.GPIOParameters=GPIO_Label
-Mcu.Pin19=PA1
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 PF6.Mode=IN4
 ProjectManager.ComputerToolchain=false
 PF9.Signal=ADC3_IN7
-Mcu.Pin17=PC3
-Mcu.Pin18=PA0/WKUP
+Mcu.Pin17=PA5
+Mcu.Pin18=PA6
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PF8
-Mcu.Pin12=PF9
+Mcu.Pin11=PC3
+Mcu.Pin12=PA0/WKUP
 PG0.GPIOParameters=GPIO_Label
 PD0.GPIOParameters=GPIO_Label
 PB8.Mode=CAN_Activate
-Mcu.Pin10=PF7
-PE3.Signal=GPIO_Output
-PE2.Locked=true
+Mcu.Pin10=PC2
 PC3.GPIO_Label=ADC_INPUT15
 PF3.Locked=true
 PF4.Signal=ADC3_IN14
@@ -328,7 +312,6 @@ PD0.GPIO_Label=EN5
 PA0/WKUP.Signal=ADCx_IN0
 RCC.PLLI2SRCLKFreq_Value=96000000
 RCC.USART2Freq_Value=16000000
-PC13.GPIO_Label=DIO5
 PC1.Locked=true
 PB13.GPIO_Label=EN18
 PG5.GPIO_Label=SEL1
@@ -336,7 +319,6 @@ PB11.Signal=GPIO_Output
 PB15.Signal=GPIO_Output
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
 PD9.Mode=Asynchronous
-PE5.GPIOParameters=GPIO_Label
 ADC3.Rank-2\#ChannelRegularConversion=3
 ProjectManager.StackSize=0x400
 ADC3.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_8
@@ -355,9 +337,8 @@ Mcu.IP0=ADC1
 PA12.Locked=true
 Mcu.IP1=ADC3
 PA12.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_Label
-Mcu.UserConstants=
 PF9.Locked=true
+Mcu.UserConstants=
 PC1.GPIOParameters=GPIO_Label
 RCC.SDMMCFreq_Value=16000000
 PF5.Locked=true
@@ -371,21 +352,21 @@ RCC.SPDIFRXFreq_Value=96000000
 PA0/WKUP.Locked=true
 SH.ADCx_IN3.ConfNb=1
 SH.ADCx_IN7.ConfNb=1
-Mcu.Pin6=PF3
-Mcu.Pin7=PF4
+Mcu.Pin6=PF9
+Mcu.Pin7=PF10
 NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-Mcu.Pin8=PF5
-Mcu.Pin9=PF6
+Mcu.Pin8=PC0
+Mcu.Pin9=PC1
 RCC.VCOSAIOutputFreq_Value=192000000
 FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE
 RCC.AHBFreq_Value=16000000
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
+Mcu.Pin0=PF3
+Mcu.Pin1=PF4
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PE4
-Mcu.Pin3=PE5
-Mcu.Pin4=PE6
-Mcu.Pin5=PC13
+Mcu.Pin2=PF5
+Mcu.Pin3=PF6
+Mcu.Pin4=PF7
+Mcu.Pin5=PF8
 ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 RCC.HSE_VALUE=25000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -405,16 +386,12 @@ PA14.Mode=Trace_Asynchronous_SW
 PC11.GPIO_Label=EN7
 File.Version=6
 PA10.GPIO_Label=EN6
-PE3.GPIOParameters=GPIO_Label
 ADC3.DataAlign=ADC_DATAALIGN_RIGHT
 SH.ADCx_IN13.ConfNb=1
-PE3.Locked=true
 PB7.Signal=GPIO_Output
 PB8.Locked=true
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN6.ConfNb=1
-PE4.Signal=GPIO_Output
-PE6.GPIOParameters=GPIO_Label
 Dma.RequestsNb=2
 Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.configTOTAL_HEAP_SIZE=300000
@@ -444,7 +421,6 @@ PF3.GPIO_Label=ADC_INPUT4
 ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 PF15.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=ADC_INPUT8
-PE2.GPIO_Label=DIO0
 PB15.Locked=true
 PB3.Locked=true
 PA3.Signal=ADCx_IN3
@@ -495,8 +471,6 @@ Dma.ADC1.0.Mode=DMA_CIRCULAR
 PB7.GPIOParameters=GPIO_Label
 PF15.Locked=true
 PB9.Mode=CAN_Activate
-PE4.Locked=true
-PE2.GPIOParameters=GPIO_Label
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=96000000
@@ -519,7 +493,6 @@ RCC.UART4Freq_Value=16000000
 SH.ADCx_IN11.0=ADC3_IN11,IN11
 MxCube.Version=6.2.1
 PG4.GPIOParameters=GPIO_Label
-PC13.GPIOParameters=GPIO_Label
 CAN1.Mode=CAN_MODE_LOOPBACK
 PF10.Signal=ADC3_IN8
 PF14.Mode=I2C
@@ -533,8 +506,6 @@ PF15.Signal=I2C4_SDA
 ADC3.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 PF14.Locked=true
 PA4.GPIOParameters=GPIO_Label
-PE5.Locked=true
-PE6.Signal=GPIO_Output
 RCC.UART5Freq_Value=16000000
 PB15.GPIOParameters=GPIO_Label
 ADC1.NbrOfConversion=10
@@ -565,7 +536,6 @@ RCC.HSI_VALUE=16000000
 ADC1.NbrOfConversionFlag=1
 PB7.Locked=true
 PB8.Signal=CAN1_RX
-PE3.GPIO_Label=DIO1
 PD9.Locked=true
 RCC.APB1Freq_Value=16000000
 ADC3.NbrOfConversionFlag=1
@@ -577,4 +547,4 @@ ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=ADC_INPUT13
 PA7.Signal=ADCx_IN7
 PA6.Locked=true
-isbadioc=true
+isbadioc=false
