--- a/power-distribution-module-2022.ioc
+++ b/power-distribution-module-2022.ioc
@@ -40,6 +40,7 @@ ADC3.Rank-7\#ChannelRegularConversion=8
 NVIC.CAN1_TX_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 ADC1.Rank-11\#ChannelRegularConversion=9
 RCC.I2C4Freq_Value=16000000
+TIM2.IPParameters=AutoReloadPreload,Prescaler,Period
 RCC.APB2TimFreq_Value=16000000
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
@@ -48,6 +49,7 @@ PD0.Signal=GPIO_Output
 ADC3.ScanConvMode=ADC_SCAN_ENABLE
 RCC.SAI2Freq_Value=96000000
 PD8.Signal=USART3_TX
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 FREERTOS.configMINIMAL_STACK_SIZE=256
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 PF10.GPIO_Label=ADC_INPUT6
@@ -87,6 +89,7 @@ RCC.MCO2PinFreq_Value=16000000
 CAN1.Prescaler=2
 PB9.Signal=CAN1_TX
 Mcu.Package=LQFP144
+TIM2.Prescaler=16-1
 PF8.GPIOParameters=GPIO_Label
 PA5.Locked=true
 NVIC.TimeBase=TIM6_DAC_IRQn
@@ -126,12 +129,14 @@ ProjectManager.ProjectFileName=power-distribution-module-2022.ioc
 Dma.ADC1.0.Instance=DMA2_Stream0
 FREERTOS.Tasks01=taskMain_Loop,0,256,task_main_loop,Default,NULL,Dynamic,NULL,NULL;taskGCAN_Hardwa,0,256,task_gcan_hw,Default,NULL,Dynamic,NULL,NULL
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=56
+Mcu.PinsNb=60
 PC11.Locked=true
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,DMAContinuousRequests,ContinuousConvMode,ScanConvMode,DiscontinuousConvMode,EOCSelection,NbrOfConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,ClockPrescaler
 PG5.Locked=true
+PG9.Locked=true
 PG5.Signal=GPIO_Output
+PG9.Signal=GPIO_Output
 PA9.GPIO_Label=EN8
 PG3.Locked=true
 ADC3.Rank-6\#ChannelRegularConversion=7
@@ -148,19 +153,25 @@ RCC.UART8Freq_Value=16000000
 PB14.Locked=true
 PC0.Signal=ADCx_IN10
 PC11.GPIOParameters=GPIO_Label
+PG10.Signal=GPIO_Output
 PF8.GPIO_Label=ADC_INPUT1
+PG10.Locked=true
 PC3.GPIOParameters=GPIO_Label
 PA11.Locked=true
 PA15.Locked=true
-Mcu.Pin51=PB8
+Mcu.Pin59=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin57=VP_SYS_VS_tim6
+Mcu.Pin58=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin51=PG11
 RCC.USART6Freq_Value=16000000
-Mcu.Pin52=PB9
+Mcu.Pin52=PB3
 SH.ADCx_IN7.0=ADC1_IN7,IN7
-Mcu.Pin50=PB7
-Mcu.Pin55=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin50=PG10
+Mcu.Pin55=PB9
 ADC3.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-Mcu.Pin53=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin54=VP_SYS_VS_tim6
+Mcu.Pin56=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin53=PB7
+Mcu.Pin54=PB8
 Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
 PA9.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
@@ -169,7 +180,7 @@ ADC3.NbrOfConversion=10
 Dma.ADC3.1.FIFOMode=DMA_FIFOMODE_DISABLE
 PD8.Mode=Asynchronous
 Mcu.Pin48=PD1
-Mcu.Pin49=PB3
+Mcu.Pin49=PG9
 Mcu.Pin46=PC12
 Mcu.Pin47=PD0
 Dma.ADC3.1.Instance=DMA2_Stream1
@@ -191,8 +202,8 @@ VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 ADC3.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_14
 Mcu.Pin37=PA9
 Mcu.Pin38=PA10
-PB15.GPIO_Label=EN16
 Mcu.Pin35=PG5
+PB15.GPIO_Label=EN16
 RCC.I2C1Freq_Value=16000000
 Mcu.Pin36=PG6
 RCC.PLLI2SPCLKFreq_Value=96000000
@@ -218,6 +229,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC10.GPIOParameters=GPIO_Label
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+TIM2.Period=4294967295
 ADC1.Rank-9\#ChannelRegularConversion=7
 ADC3.Rank-5\#ChannelRegularConversion=6
 PA13.Mode=Trace_Asynchronous_SW
@@ -273,6 +285,7 @@ PG0.GPIOParameters=GPIO_Label
 PD0.GPIOParameters=GPIO_Label
 PB8.Mode=CAN_Activate
 Mcu.Pin10=PC2
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 PC3.GPIO_Label=ADC_INPUT15
 PF3.Locked=true
 PF4.Signal=ADC3_IN14
@@ -319,6 +332,7 @@ PB11.Signal=GPIO_Output
 PB15.Signal=GPIO_Output
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
 PD9.Mode=Asynchronous
+PG11.Signal=GPIO_Output
 ADC3.Rank-2\#ChannelRegularConversion=3
 ProjectManager.StackSize=0x400
 ADC3.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_8
@@ -346,7 +360,7 @@ Mcu.ThirdPartyNb=0
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_10
 RCC.HCLKFreq_Value=16000000
 SH.ADCx_IN3.0=ADC1_IN3,IN3
-Mcu.IPNb=12
+Mcu.IPNb=13
 ProjectManager.PreviousToolchain=
 RCC.SPDIFRXFreq_Value=96000000
 PA0/WKUP.Locked=true
@@ -371,9 +385,10 @@ ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 RCC.HSE_VALUE=25000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ADC3.InjNumberOfConversion=0
-Mcu.IP10=TIM14
+Mcu.IP10=TIM2
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-Mcu.IP11=USART3
+Mcu.IP12=USART3
+Mcu.IP11=TIM14
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Rank-2\#ChannelRegularConversion=1
@@ -403,6 +418,7 @@ ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 PA6.Signal=ADCx_IN6
 Dma.ADC3.1.Direction=DMA_PERIPH_TO_MEMORY
 PA7.Locked=true
+PG11.Locked=true
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=ADC_INPUT16
 RCC.LSI_VALUE=32000
@@ -474,8 +490,8 @@ PB9.Mode=CAN_Activate
 PC2.Locked=true
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=96000000
-PF5.GPIOParameters=GPIO_Label
 PF9.GPIO_Label=ADC_INPUT9
+PF5.GPIOParameters=GPIO_Label
 RCC.PLLSAIoutputFreq_Value=96000000
 RCC.LSE_VALUE=32768
 PA1.Signal=ADCx_IN1
@@ -493,6 +509,7 @@ RCC.UART4Freq_Value=16000000
 SH.ADCx_IN11.0=ADC3_IN11,IN11
 MxCube.Version=6.2.1
 PG4.GPIOParameters=GPIO_Label
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
 CAN1.Mode=CAN_MODE_LOOPBACK
 PF10.Signal=ADC3_IN8
 PF14.Mode=I2C
