--- a/power-distribution-module-2022.ioc
+++ b/power-distribution-module-2022.ioc
@@ -3,8 +3,10 @@ PF7.GPIOParameters=GPIO_Label
 NVIC.CAN1_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 PB13.GPIOParameters=GPIO_Label
 PF4.Mode=IN14
+PC7.GPIOParameters=GPIO_Label
 RCC.USART1Freq_Value=16000000
 VP_SYS_VS_tim6.Mode=TIM6
+USART2.IPParameters=VirtualMode-Asynchronous
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PC12.Locked=true
 PG4.Signal=GPIO_Output
@@ -18,6 +20,7 @@ PG6.GPIO_Label=EN15
 RCC.PLLQCLKFreq_Value=96000000
 PG0.Signal=GPIO_Input
 PG3.GPIOParameters=GPIO_Label
+PC7.Locked=true
 PD8.Locked=true
 PC3.Locked=true
 PA3.GPIOParameters=GPIO_Label
@@ -30,7 +33,6 @@ PinOutPanel.RotationAngle=0
 PF6.GPIO_Label=ADC_INPUT7
 ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_13
 ADC3.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_12
-USART3.VirtualMode-Asynchronous=VM_ASYNC
 RCC.LPTIM1Freq_Value=16000000
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 PD15.GPIOParameters=GPIO_Label
@@ -44,6 +46,7 @@ TIM2.IPParameters=AutoReloadPreload,Prescaler,Period
 RCC.APB2TimFreq_Value=16000000
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+PC7.Signal=GPIO_Output
 PC3.Signal=ADCx_IN13
 PD0.Signal=GPIO_Output
 ADC3.ScanConvMode=ADC_SCAN_ENABLE
@@ -93,10 +96,10 @@ TIM2.Prescaler=16-1
 PF8.GPIOParameters=GPIO_Label
 PA5.Locked=true
 NVIC.TimeBase=TIM6_DAC_IRQn
+PD11.Locked=true
 PG5.GPIOParameters=GPIO_Label
 ADC3.Rank-0\#ChannelRegularConversion=1
 NVIC.TimeBaseIP=TIM6
-USART3.IPParameters=VirtualMode-Asynchronous
 PA10.Signal=GPIO_Output
 FREERTOS.FootprintOK=true
 PA5.GPIOParameters=GPIO_Label
@@ -129,7 +132,7 @@ ProjectManager.ProjectFileName=power-distribution-module-2022.ioc
 Dma.ADC1.0.Instance=DMA2_Stream0
 FREERTOS.Tasks01=taskMain_Loop,0,256,task_main_loop,Default,NULL,Dynamic,NULL,NULL;taskGCAN_Hardwa,0,256,task_gcan_hw,Default,NULL,Dynamic,NULL,NULL
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=60
+Mcu.PinsNb=63
 PC11.Locked=true
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,DMAContinuousRequests,ContinuousConvMode,ScanConvMode,DiscontinuousConvMode,EOCSelection,NbrOfConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,ClockPrescaler
@@ -150,65 +153,68 @@ PA11.GPIO_Label=EN9
 PF14.GPIO_Label=SCL
 NVIC.DMA2_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 RCC.UART8Freq_Value=16000000
-PB14.Locked=true
 PC0.Signal=ADCx_IN10
+PB14.Locked=true
 PC11.GPIOParameters=GPIO_Label
+PD6.Mode=Asynchronous
+Mcu.Pin62=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin60=VP_SYS_VS_tim6
+Mcu.Pin61=VP_TIM2_VS_ClockSourceINT
 PG10.Signal=GPIO_Output
 PF8.GPIO_Label=ADC_INPUT1
 PG10.Locked=true
 PC3.GPIOParameters=GPIO_Label
 PA11.Locked=true
 PA15.Locked=true
-Mcu.Pin59=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin57=VP_SYS_VS_tim6
-Mcu.Pin58=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin51=PG11
+Mcu.Pin59=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin57=PB8
+Mcu.Pin58=PB9
+Mcu.Pin51=PD5
 RCC.USART6Freq_Value=16000000
-Mcu.Pin52=PB3
+Mcu.Pin52=PD6
 SH.ADCx_IN7.0=ADC1_IN7,IN7
-Mcu.Pin50=PG10
-Mcu.Pin55=PB9
+Mcu.Pin50=PD1
+Mcu.Pin55=PG11
 ADC3.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-Mcu.Pin56=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin53=PB7
-Mcu.Pin54=PB8
+Mcu.Pin56=PB3
+Mcu.Pin53=PG9
+Mcu.Pin54=PG10
 Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
 PA9.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
 PB9.Locked=true
 ADC3.NbrOfConversion=10
 Dma.ADC3.1.FIFOMode=DMA_FIFOMODE_DISABLE
-PD8.Mode=Asynchronous
-Mcu.Pin48=PD1
-Mcu.Pin49=PG9
-Mcu.Pin46=PC12
-Mcu.Pin47=PD0
+Mcu.Pin48=PC12
+Mcu.Pin49=PD0
+Mcu.Pin46=PC10
+Mcu.Pin47=PC11
 Dma.ADC3.1.Instance=DMA2_Stream1
 PB10.Signal=GPIO_Output
 PF3.GPIOParameters=GPIO_Label
 ADC3.Rank-9\#ChannelRegularConversion=10
-PB14.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_Label
+PB14.Signal=GPIO_Output
 PA5.Signal=ADCx_IN5
-Mcu.Pin40=PA12
-Mcu.Pin41=PA13
-Mcu.Pin44=PC10
-Mcu.Pin45=PC11
-Mcu.Pin42=PA14
-Mcu.Pin43=PA15
+Mcu.Pin40=PA10
+Mcu.Pin41=PA11
+Mcu.Pin44=PA14
+Mcu.Pin45=PA15
+Mcu.Pin42=PA12
+Mcu.Pin43=PA13
 ADC1.Rank-12\#ChannelRegularConversion=10
 ProjectManager.LastFirmware=false
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 ADC3.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_14
-Mcu.Pin37=PA9
-Mcu.Pin38=PA10
-Mcu.Pin35=PG5
+Mcu.Pin37=PG6
+Mcu.Pin38=PC7
+Mcu.Pin35=PG4
 PB15.GPIO_Label=EN16
 RCC.I2C1Freq_Value=16000000
-Mcu.Pin36=PG6
+Mcu.Pin36=PG5
 RCC.PLLI2SPCLKFreq_Value=96000000
 SH.ADCx_IN0.ConfNb=1
-Mcu.Pin39=PA11
+Mcu.Pin39=PA9
 RCC.RNGFreq_Value=96000000
 PC2.GPIOParameters=GPIO_Label
 PF4.GPIO_Label=ADC_INPUT5
@@ -217,12 +223,12 @@ PA1.GPIO_Label=ADC_INPUT10
 Dma.ADC3.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 RCC.EthernetFreq_Value=16000000
 SH.ADCx_IN12.ConfNb=1
-Mcu.Pin33=PG3
+Mcu.Pin33=PD15
 PA0/WKUP.GPIO_Label=ADC_INPUT14
-Mcu.Pin34=PG4
-Mcu.Pin31=PD13
+Mcu.Pin34=PG3
+Mcu.Pin31=PD11
 SH.ADCx_IN4.0=ADC1_IN4,IN4
-Mcu.Pin32=PD15
+Mcu.Pin32=PD13
 PA9.Locked=true
 Dma.ADC3.1.PeriphInc=DMA_PINC_DISABLE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -244,6 +250,7 @@ Mcu.Pin24=PB11
 ProjectManager.UnderRoot=true
 Mcu.Pin25=PB12
 Mcu.Pin28=PB15
+PC7.GPIO_Label=EN14
 Mcu.Pin29=PD8
 ADC3.Rank-1\#ChannelRegularConversion=2
 PA4.Signal=ADCx_IN4
@@ -256,6 +263,7 @@ Mcu.Pin21=PF15
 PA10.Locked=true
 PA5.GPIO_Label=ADC_INPUT19
 NVIC.ForceEnableDMAVector=true
+PD11.Signal=GPIO_Output
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PC12.GPIO_Label=EN2
 ProjectManager.CompilerOptimize=6
@@ -299,12 +307,14 @@ PC0.Locked=true
 ADC1.Rank-5\#ChannelRegularConversion=4
 PC1.Signal=ADCx_IN11
 PB12.GPIOParameters=GPIO_Label
+PG10.GPIO_Label=STATUS_LED
 NVIC.CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 Mcu.Family=STM32F7
 ProjectManager.MainLocation=Core/Src
 RCC.SAI1Freq_Value=96000000
 RCC.CortexFreq_Value=16000000
 PG6.Signal=GPIO_Output
+PG9.GPIOParameters=GPIO_Label
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F756ZGTx
 ADC1.ContinuousConvMode=ENABLE
@@ -316,7 +326,7 @@ PC10.Locked=true
 PG6.Locked=true
 PC10.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM14_Init-TIM14-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_I2C4_Init-I2C4-false-HAL-true,8-MX_TIM14_Init-TIM14-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PA9.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=GPIO_Label
@@ -331,7 +341,6 @@ PG5.GPIO_Label=SEL1
 PB11.Signal=GPIO_Output
 PB15.Signal=GPIO_Output
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
-PD9.Mode=Asynchronous
 PG11.Signal=GPIO_Output
 ADC3.Rank-2\#ChannelRegularConversion=3
 ProjectManager.StackSize=0x400
@@ -358,6 +367,7 @@ RCC.SDMMCFreq_Value=16000000
 PF5.Locked=true
 Mcu.ThirdPartyNb=0
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_10
+PD11.GPIO_Label=EN10
 RCC.HCLKFreq_Value=16000000
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 Mcu.IPNb=13
@@ -376,6 +386,7 @@ FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configTOTAL_H
 RCC.AHBFreq_Value=16000000
 Mcu.Pin0=PF3
 Mcu.Pin1=PF4
+PD5.Mode=Asynchronous
 GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PF5
 Mcu.Pin3=PF6
@@ -386,8 +397,9 @@ RCC.HSE_VALUE=25000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 ADC3.InjNumberOfConversion=0
 Mcu.IP10=TIM2
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-Mcu.IP12=USART3
+Mcu.IP12=USART2
 Mcu.IP11=TIM14
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_0
@@ -403,7 +415,6 @@ File.Version=6
 PA10.GPIO_Label=EN6
 ADC3.DataAlign=ADC_DATAALIGN_RIGHT
 SH.ADCx_IN13.ConfNb=1
-PB7.Signal=GPIO_Output
 PB8.Locked=true
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN6.ConfNb=1
@@ -412,7 +423,6 @@ Dma.ADC3.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 FREERTOS.configTOTAL_HEAP_SIZE=300000
 ProjectManager.ProjectName=power-distribution-module-2022
 PF15.Mode=I2C
-PB7.GPIO_Label=BLUE_LED
 PD13.GPIO_Label=DIA_EN
 ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 PA6.Signal=ADCx_IN6
@@ -431,6 +441,8 @@ PF5.Signal=ADC3_IN15
 PF4.Locked=true
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 Dma.Request1=ADC3
+PG11.GPIO_Label=FAULT_LED
+PD6.Signal=USART2_RX
 ADC1.Rank-6\#ChannelRegularConversion=5
 Dma.Request0=ADC1
 PF3.GPIO_Label=ADC_INPUT4
@@ -461,6 +473,7 @@ PC11.Signal=GPIO_Output
 ADC1.DiscontinuousConvMode=DISABLE
 ProjectManager.DefaultFWLocation=true
 PD9.Signal=USART3_RX
+PD5.Signal=USART2_TX
 PB12.Locked=true
 ProjectManager.DeletePrevious=true
 ADC3.Rank-3\#ChannelRegularConversion=4
@@ -484,10 +497,10 @@ ADC3.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_9
 PB10.GPIO_Label=EN13
 PF6.Locked=true
 Dma.ADC1.0.Mode=DMA_CIRCULAR
-PB7.GPIOParameters=GPIO_Label
 PF15.Locked=true
 PB9.Mode=CAN_Activate
 PC2.Locked=true
+PG10.GPIOParameters=GPIO_Label
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=96000000
 PF9.GPIO_Label=ADC_INPUT9
@@ -497,10 +510,12 @@ RCC.LSE_VALUE=32768
 PA1.Signal=ADCx_IN1
 CAN1.ABOM=ENABLE
 RCC.VCOI2SOutputFreq_Value=192000000
+PG9.GPIO_Label=LED_ADC
 RCC.PLLSAIPCLKFreq_Value=96000000
 board=custom
 RCC.VCOOutputFreq_Value=192000000
 PF14.GPIOParameters=GPIO_Label
+PD11.GPIOParameters=GPIO_Label
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_5
 NVIC.SavedSystickIrqHandlerGenerated=true
@@ -551,7 +566,6 @@ SH.ADCx_IN10.0=ADC1_IN10,IN10
 PF6.GPIOParameters=GPIO_Label
 RCC.HSI_VALUE=16000000
 ADC1.NbrOfConversionFlag=1
-PB7.Locked=true
 PB8.Signal=CAN1_RX
 PD9.Locked=true
 RCC.APB1Freq_Value=16000000
@@ -561,6 +575,7 @@ PB11.Locked=true
 ProjectManager.DeviceId=STM32F756ZGTx
 PB12.Signal=GPIO_Output
 ProjectManager.LibraryCopy=1
+PG11.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=ADC_INPUT13
 PA7.Signal=ADCx_IN7
 PA6.Locked=true
